--- a/.air.toml
+++ b/.air.toml
@@ -2,15 +2,15 @@
 
 root = "."
 testdata_dir = "testdata"
-tmp_dir = "tmp"
+tmp_dir = "bin"
 
 [build]
   args_bin = []
   bin = "./bin/ranked"
-  cmd = "make build"
+  cmd = "go build -o ./bin/ranked ./cmd/api"
   delay = 1000
   entrypoint = ["./bin/ranked"]
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["assets", "bin", "vendor", "testdata", "scripts"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
